--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.ychat</groupId>
         <artifactId>ychat</artifactId>
-        <version>1.0.0</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>api</artifactId>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.ychat</groupId>
             <artifactId>api</artifactId>
-            <version>1.0.0</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
