--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -16,12 +16,6 @@
         <maven.compiler.target>20</maven.compiler.target>
     </properties>
     <dependencies>
-        <!--common-->
-        <dependency>
-            <groupId>com.heima</groupId>
-            <artifactId>hm-common</artifactId>
-            <version>1.0.0</version>
-        </dependency>
         <!--网关-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -36,6 +30,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ychat</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
