--- a/chat/pom.xml
+++ b/chat/pom.xml
@@ -99,11 +99,11 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
         <!-- mongodb-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-            <version> 2.3.9.RELEASE</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+<!--            <version> 2.3.9.RELEASE</version>-->
+<!--        </dependency>-->
         <!--    rocketmq-->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
